# cleanup-report

./: README.MD  README.md  docker-compose.yml
backend/: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  entrypoint.sh  populate_users.py  pyproject.toml  requirements.txt
backend/config/: celery.py  paginations.py  settings.py  urls.py
backend/user/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/user/management/commands/: create_periodic_tasks.py  submission_mail.py
backend/user/migrations/: 0001_initial.py  0002_deadlettertask.py
frontend/: .example.env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: Navbar.js
frontend/src/configs/: index.js
frontend/src/helpers/: index.js
frontend/src/layouts/: AuthLayout.jsx
frontend/src/pages/auth/components/: LoginForm.jsx
frontend/src/pages/report/: CleanReportList.jsx
frontend/src/pages/report/api/: call.js  index.js
frontend/src/plugins/: axios.js
frontend/src/routers/: index.jsx
nginx/: nginx.conf
